# lightdoor

./: docker-compose.yaml  run.sh  supergraph.yml
router/: Cargo.toml  Dockerfile  build.rs  router-pv.yaml  router-pvc.yaml  router-service.yaml  router.yaml
router/config/: router.yaml  supergraph-schema.graphql
router/idl/: security.proto
router/src/: jwt.rs  main.rs
security/: .env  Dockerfile  build.sh  go.mod  go.sum  handler.go  kitex_info.yaml  main.go
security/jwt/: claims.go  utils.go
security/kitex_gen/token/: security.pb.fast.go  security.pb.go
security/kitex_gen/token/securityservice/: client.go  invoker.go  securityservice.go  server.go
security/script/: bootstrap.sh
